--- a/source/sass/itcss/_settings.fonts.scss
+++ b/source/sass/itcss/_settings.fonts.scss
@@ -1,7 +1,7 @@
 // Fonts
 $baseFontStack: 'Lato', sans-serif !default;
 $baseFontSize: 1.2em !default;
-$baseFontColor: $black !default;
+$baseFontColor: $baseFontColor !default;
 $baseParagraphFontSize: 1.3em !default;
 
 
