--- a/source/sass/itcss/_utilities.helper.scss
+++ b/source/sass/itcss/_utilities.helper.scss
@@ -1,7 +1,11 @@
 .float-left {
-	float: left;
+	float: left !important;
 }
 
 .float-right {
-	float: right;
+	float: right !important;
+}
+
+.text-center {
+	text-align: center;
 }
