--- a/source/sass/itcss/_settings.colors.scss
+++ b/source/sass/itcss/_settings.colors.scss
@@ -1,6 +1,6 @@
 // Default colors
 $white: #fff;
 $black: #000000;
-$baseFontColor: #3e3e3e;
+$baseFontColor: #727272;
 $nav-bg-color: #f8f8f8;
 $activeLinkColor: #007ef4;
