Updated to BEM naming conventions.. I think

--- a/source/sass/itcss/_elements.navbar.scss
+++ b/source/sass/itcss/_elements.navbar.scss
@@ -5,7 +5,7 @@ nav {
         margin: 0px;
         list-style: none;
         & li {
-        &.active {
+        &.nav__item--active {
             color: $activeLinkColor;
         }
         display: inline;
