--- a/source/sass/styles.scss
+++ b/source/sass/styles.scss
@@ -14,6 +14,7 @@ DO NOT EDIT THE CSS DIRECTLY
 @import 'itcss/_settings.fonts';
 @import 'itcss/_settings.headings';
 @import 'itcss/_settings.links';
+@import 'itcss/_settings.images';
 
 @import 'itcss/_generic.gridlayout';
 @import 'itcss/_generic.reset';
