--- a/source/css/helper/styles.css
+++ b/source/css/helper/styles.css
@@ -17,39 +17,44 @@ DO NOT EDIT THE CSS DIRECTLY
 /* ----------- Tablets ----------- */
 /* ----------- iPad mini, 1 and 2 ----------- */
 /* ----------- iPad 3 and 4 ----------- */
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .column {
   display: inline-block;
 }
 
-.col-20 {
+.column--20 {
   width: 20%;
 }
 
-.col-25 {
+.column--25 {
   width: 25%;
 }
 
-.col-30 {
+.column--30 {
   width: 30%;
 }
 
-.col-33 {
+.column--33 {
   width: 33%;
 }
 
-.col-50 {
+.column--50 {
   width: 50%;
 }
 
-.col-75 {
+.column--75 {
   width: 75%;
 }
 
-.col-80 {
+.column--80 {
   width: 80%;
 }
 
-.col-100 {
+.column--100 {
   width: 100%;
 }
 
@@ -57,6 +62,7 @@ body {
   font: "Lato", sans-serif;
   font-size: 1em;
   color: #727272;
+  margin: 0px;
 }
 
 h1 {
@@ -101,7 +107,7 @@ nav ul li {
   display: inline;
   padding: 10px 20px;
 }
-nav ul li.active {
+nav ul li.nav__item--active {
   color: #007ef4;
 }
 
@@ -114,6 +120,7 @@ p {
 .row {
   line-height: 4.5rem;
   display: flex;
+  padding: 0 40px;
   /*padding: 10px;*/
 }
 
@@ -121,40 +128,6 @@ p {
   content: "";
   display: table;
   clear: both;
-}
-
-a {
-  padding: 10px 20px !important;
-  background-color: #000000 !important;
-  color: #000000 !important;
-  -webkit-transition: all linear 0.3s;
-  -o-transition: all linear 0.3s;
-  transition: all linear 0.3s;
-}
-a:hover {
-  padding: #000 !important;
-  background-color: #000000 !important;
-  color: #000000 !important;
-  -webkit-transition: all linear 0.6s;
-  -o-transition: all linear 0.6s;
-  transition: all linear 0.6s;
-}
-
-a {
-  padding: 10px 20px !important;
-  background-color: #000000 !important;
-  color: #000000 !important;
-  -webkit-transition: all linear 0.3s;
-  -o-transition: all linear 0.3s;
-  transition: all linear 0.3s;
-}
-a:hover {
-  padding: #000 !important;
-  background-color: #000000 !important;
-  color: #000000 !important;
-  -webkit-transition: all linear 0.6s;
-  -o-transition: all linear 0.6s;
-  transition: all linear 0.6s;
 }
 
 .float-left {
