--- a/source/sass/itcss/_generic.gridlayout.scss
+++ b/source/sass/itcss/_generic.gridlayout.scss
@@ -2,33 +2,33 @@
   display: inline-block;
   }
   
-  .col-20 {
+  .column--20 {
     width: 20%;
   }
   
-  .col-25 {
+  .column--25 {
     width: 25%;
   }
   
-  .col-30 {
+  .column--30 {
     width: 30%;
   }
   
-  .col-33 {
+  .column--33 {
     width: 33%;
   }
-  .col-50 {
+  .column--50 {
     width: 50%;
   }
-  .col-75 {
+  .column--75 {
     width: 75%;
   }
   
-  .col-80 {
+  .column--80 {
     width: 80%;
   }
   
-  .col-100 {
+  .column--100 {
     width: 100%;
   }
   
