Styling updates and fixes

--- a/source/sass/itcss/_elements.row.scss
+++ b/source/sass/itcss/_elements.row.scss
@@ -1,7 +1,7 @@
 .row {
-    line-height: 4.5rem;
+    padding: 20px;
     display: flex;
-    padding: 0 40px;
+    padding: 1rem 2rem;
    /*padding: 10px;*/
 }
 
@@ -9,4 +9,12 @@
  content: "";
  display: table;
  clear: both;
+}
+
+@media only screen and (max-width: 600px) {
+    .row {
+        padding: 20px;
+        display: inline-block;
+        margin: 0 1rem;
+    }
 }
