--- a/source/sass/styles.scss
+++ b/source/sass/styles.scss
@@ -24,8 +24,9 @@ DO NOT EDIT THE CSS DIRECTLY
 @import 'itcss/_elements.navbar';
 @import 'itcss/_elements.paragraph';
 @import 'itcss/_elements.row';
-
-
+@import 'itcss/_elements.main';
+@import 'itcss/_elements.topbar';
+@import 'itcss/_elements.cards';
 
 @import 'itcss/_tools.mixins';
 @import 'itcss/_tools.mixins';
