--- a/source/css/helper/styles.css
+++ b/source/css/helper/styles.css
@@ -20,10 +20,13 @@ DO NOT EDIT THE CSS DIRECTLY
 img {
   max-width: 100%;
   height: auto;
+  border-radius: 5px;
+  margin: 0 10px;
 }
 
 .column {
   display: inline-block;
+  margin: auto 10px;
 }
 
 .column--20 {
@@ -58,6 +61,46 @@ img {
   width: 100%;
 }
 
+/* Media Queries */
+@media only screen and (max-width: 600px) {
+  .column {
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+  }
+
+  .column--25 {
+    width: 100%;
+  }
+
+  .column--20 {
+    width: 100%;
+  }
+
+  .column--30 {
+    width: 50%;
+  }
+
+  .column--33 {
+    width: 100%;
+  }
+
+  .column--50 {
+    width: 100%;
+  }
+
+  .column--75 {
+    width: 100%;
+  }
+
+  .column--80 {
+    width: 100%;
+  }
+
+  .column--100 {
+    width: 100%;
+  }
+}
 body {
   font: "Lato", sans-serif;
   font-size: 1em;
@@ -115,12 +158,13 @@ p {
   color: #727272;
   font-size: 1em;
   line-height: normal;
+  border: none;
 }
 
 .row {
-  line-height: 4.5rem;
+  padding: 20px;
   display: flex;
-  padding: 0 40px;
+  padding: 1rem 2rem;
   /*padding: 10px;*/
 }
 
@@ -128,6 +172,39 @@ p {
   content: "";
   display: table;
   clear: both;
+}
+
+@media only screen and (max-width: 600px) {
+  .row {
+    padding: 20px;
+    display: inline-block;
+    margin: 0 1rem;
+  }
+}
+.main__wrapper {
+  background-image: linear-gradient(#d2d2d2, #fafafa);
+}
+
+.topbar {
+  line-height: 0;
+}
+
+.card {
+  height: 205px;
+  box-shadow: 0px 0px 10px 0px #d4d4d4;
+  border-radius: 5px;
+  background-color: #fff;
+  padding: 20px;
+}
+
+.card__heading {
+  margin: 0;
+  padding: 0;
+}
+
+.card__content {
+  margin: 0;
+  padding: 0;
 }
 
 .float-left {
