--- a/source/sass/itcss/_generic.gridlayout.scss
+++ b/source/sass/itcss/_generic.gridlayout.scss
@@ -1,5 +1,6 @@
 .column {
   display: inline-block;
+  margin: auto 10px;
   }
   
   .column--20 {
@@ -32,3 +33,42 @@
     width: 100%;
   }
   
+  /* Media Queries */
+
+  @media only screen and (max-width: 600px) {
+    .column {
+      display: inline-block;
+      padding: 0;
+      margin: 0;
+      }
+      .column--25 {
+        width: 100%;
+      }
+      .column--20 {
+        width: 100%;
+      }
+    
+      .column--30 {
+      width: 50%;
+    }
+    
+    .column--33 {
+      width: 100%;
+    }
+    
+      .column--50 {
+        width: 100%;
+      }
+    
+      .column--75 {
+        width: 100%;
+      }
+    
+      .column--80 {
+        width: 100%;
+      }
+    
+      .column--100 {
+        width: 100%;
+      }
+  }
