--- a/source/sass/itcss/_settings.colors.scss
+++ b/source/sass/itcss/_settings.colors.scss
@@ -1,7 +1,8 @@
 // Default colors
 $white: #fff;
 $black: #000000;
-$baseFontColor: #727272;
+$baseFontColor: #000;
 $nav-bg-color: #f8f8f8;
 $activeLinkColor: #007ef4;
 $boxshadow_grey: #d4d4d4;
+$paragraphColor_grey: #7f7f7f;
