--- a/source/sass/itcss/_settings.headings.scss
+++ b/source/sass/itcss/_settings.headings.scss
@@ -2,7 +2,7 @@
 $baseHeadingColor: $black !default;
 $baseH1FontSize : 2em !default;
 $baseH2FontSize : 1.5em !default;
-$baseH3FontSize : 1.17em !default;
+$baseH3FontSize : 20px !default;
 $baseH4FontSize : 1em !default;
 $baseH5FontSize : 0.83em !default;
 $baseH6FontSize : 0.7em !default;
