--- a/source/sass/itcss/_utilities.helper.scss
+++ b/source/sass/itcss/_utilities.helper.scss
@@ -9,3 +9,19 @@
 .text-center {
 	text-align: center;
 }
+
+.text-right {
+	text-align: right;
+}
+
+.text-left {
+	text-align: left;
+}
+
+.boxshadow--grey{
+	@include boxshadow--grey;
+}
+
+.borderradius--small{
+	border-radius: 5px;
+}
