--- a/source/sass/itcss/_elements.row.scss
+++ b/source/sass/itcss/_elements.row.scss
@@ -3,12 +3,12 @@
     display: flex;
     padding: 1rem 2rem;
    /*padding: 10px;*/
-}
 
-.row:after {
- content: "";
- display: table;
- clear: both;
+   &:after {
+    content: "";
+    display: table;
+    clear: both;
+   }
 }
 
 @media only screen and (max-width: 600px) {
