--- a/source/sass/styles.scss
+++ b/source/sass/styles.scss
@@ -28,6 +28,7 @@ DO NOT EDIT THE CSS DIRECTLY
 @import 'itcss/_elements.main';
 @import 'itcss/_elements.topbar';
 @import 'itcss/_elements.cards';
+@import 'itcss/_elements.footer';
 
 @import 'itcss/_utilities.helper';
 
