--- a/source/sass/itcss/_elements.navbar.scss
+++ b/source/sass/itcss/_elements.navbar.scss
@@ -15,3 +15,43 @@ nav {
 
 }
 
+#desktop-header {
+    display: block;
+}
+
+#mobile-nav {
+    display: none;
+    & .row {
+        display: flex;
+        padding: 0;
+        width: 100%;
+    }
+    & .column {
+        padding: 0;
+    }
+    & img {
+       border-radius: 0;
+       max-height: 50px;
+    }
+
+}
+
+
+@media only screen and (max-width: 600px) {
+
+    #desktop-header {
+        display: none;
+    }
+    #mobile-nav {
+        display: flex;
+    }
+    #mobile-nav .column--50 {
+        width: 50% !important;
+    }
+    #mobile-nav .text-left {
+        text-align: left !important;
+    }
+    #mobile-nav .text-right {
+        text-align: right !important;
+    }
+  }
