--- a/source/sass/itcss/_generic.gridlayout.scss
+++ b/source/sass/itcss/_generic.gridlayout.scss
@@ -2,7 +2,9 @@
   display: inline-block;
   margin: auto 10px;
   }
-  
+  .column--10 {
+    width: 10%;
+  }
   .column--20 {
     width: 20%;
   }
@@ -28,7 +30,9 @@
   .column--80 {
     width: 80%;
   }
-  
+  .column--90 {
+    width: 90%;
+  }
   .column--100 {
     width: 100%;
   }
@@ -38,8 +42,12 @@
   @media only screen and (max-width: 600px) {
     .column {
       display: inline-block;
-      padding: 0;
+      padding: 15px 0;
       margin: 0;
+      }
+
+      .column--10 {
+        width: 10%;
       }
       .column--25 {
         width: 100%;
@@ -67,8 +75,20 @@
       .column--80 {
         width: 100%;
       }
+
+      .column--90 {
+        width: 90%;
+      }
     
       .column--100 {
         width: 100%;
+      }
+
+      .text-right {
+        text-align: center !important; 
+      }
+
+      .text-left {
+        text-align: center !important; 
       }
   }
