Side nav done. TODO: Cleanup

--- a/source/sass/itcss/_settings.colors.scss
+++ b/source/sass/itcss/_settings.colors.scss
@@ -6,3 +6,4 @@ $nav-bg-color: #f8f8f8;
 $activeLinkColor: #007ef4;
 $boxshadow_grey: #d4d4d4;
 $paragraphColor_grey: #7f7f7f;
+$sidenav-background-color: #175482;
