--- a/source/sass/itcss/elements/_elements.navbar.scss
+++ b/source/sass/itcss/elements/_elements.navbar.scss
@@ -96,7 +96,7 @@ nav {
   }
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: $iphone6-max-width) {
 
     #desktop-header {
         display: none;
@@ -104,8 +104,11 @@ nav {
     #mobile-nav {
         display: flex;
     }
-    #mobile-nav .column--50 {
-        width: 50% !important;
+    #mobile-nav .column--80 {
+        width: 100% !important;
+    }
+    #mobile-nav .column--20 {
+        width: 20% !important;
     }
     #mobile-nav .text-left {
         text-align: left !important;
